src/objects/Community_Dynamic_Links__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsection_Link__c</fullName>
        <label>Subsection Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subsection_Order__c</fullName>
        <label>Subsection Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subsection__c</fullName>
        <label>Subsection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Link</fullName>
                </value>
                <value>
                    <fullName>Button</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Community Dynamic Links</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dynamic Community Links Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Dynamic Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>